--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,12 @@
             android:name=".data.WeatherProvider"
             android:authorities="@string/content_authority"
             android:exported="false"/>
+        
+        <!-- COMPLETED (8) Register SunshineSyncIntentService in the manifest -->
+        <!--This is required for immediate syncs -->
+        <service
+            android:name=".sync.SunshineSyncIntentService"
+            android:exported="false" />
 
     </application>
 </manifest>
